--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
     <link rel="stylesheet" href="assets/css/style.css">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="shortcut icon" href="assets/img/title.png" type="image/x-icon">
    
 
-    <title>Responsive portfolio website - CrypticalCoder</title>
+    <title>Muhammed Yahiya</title>
 </head>
 <body>
     <!--=============== HEADER ===============-->
@@ -468,7 +469,7 @@
         <footer class="footer">
             <div class="container">
                 <div class="footer-text padd-15">
-                    <p>&copy; Cryptical Coder Template</p>
+                    <p>Copyrights</p>
                 </div>
             </div>
         </footer>
