--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
                     <div class="portfolio-item padd-15" data-category="art">
                         <div class="portfolio-item-inner">
                             <div class="portfolio-item-thumbnail">
-                                <a href=""><img src="assets/img/JobPortal.webp" alt=""></a>
+                                <a href=""><img src="assets/img/JobListing.png" alt=""></a>
                                 <div class="mask"></div>
                             </div>
                             <span class="term">Development</span>
